--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,8 @@
 .page {
      margin: 0 auto;
      background-color: #2A2C2F;
-     font-family: 'Inter' , sans-serif;
+     font-family: 'Inter', sans-serif;
+     font-weight: normal;
      text-rendering: optimizeLegibility;
      min-width: 320px;
 }
