--- a/blocks/baikal/__text-block/_subtitle/baikal__subtitle.css
+++ b/blocks/baikal/__text-block/_subtitle/baikal__subtitle.css
@@ -1,4 +1,4 @@
-.baikal__text-block_subtitle {
+.baikal__subtitle {
     font-size: 18px;
     max-width: 360px;
     margin: 32px auto;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 320px) {
-    .baikal__text-block_subtitle {
+    .baikal__subtitle {
         font-size: 14px;
         line-height: 16px;
         margin: 0;
