--- a/blocks/places/__website/places__website.css
+++ b/blocks/places/__website/places__website.css
@@ -1,9 +1,8 @@
 .places__website {
   color: inherit;
-  text-decoration: none;
   font: normal 400 12px/22px 'Inter';
 }
 
 .places__website:hover {
-    text-decoration: underline;
+  opacity: .7;
 }
