--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -10,6 +10,7 @@
 @media screen and (max-width: 767px) {
     .lead__subtitle {
         max-width: 288px;
+        margin: 16px auto 40px;
         font-size: 16px;
         line-height: 20px;
     }    
