--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,18 +1,17 @@
 .lead {
-    margin: 56px auto;
-    padding: 56px auto 96px;
+    margin: 56px auto 0;
     max-width: 984px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     flex-wrap: wrap;
     word-wrap: normal;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
     .lead {
         max-width: 928px;
-        margin: 48px auto;
+        margin: 48px auto 0 ;
+        align-items: center;
     }
 }
 
