--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -12,8 +12,9 @@
 @media screen and (max-width: 1023px) {
   .places__item {
     padding: auto 20px;
-    gap: 48px 28px;
+    /* gap: 48px 28px; */
     width: 100%;
+    border: 1px solid red;
   }
 }
 
@@ -25,7 +26,7 @@
       'places__image'
       'places__description';
     width: 100%;
-    gap: 32px 0;
+    /* gap: 32px 0; */
     margin-top: 64px;
   }
 }
