--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,7 +1,7 @@
 .places {
     max-width: 984px;
     margin: 0 auto;
-    padding: 92px 148px;
+    padding: 0 92px 148px;
 }
 
 @media screen and (max-width: 1023px) {
@@ -21,6 +21,5 @@
     .places {
         max-width: 100%;
         padding: 0;
-
     }
 }
