--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -3,6 +3,16 @@
     flex-direction: row;
     margin: 0;
     padding: 0;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 400;
+}
+
+@media screen and (max-width: 1023px) {
+    .footer__list {
+        font-size: 16px;
+        line-height: 18px;
+    }
 }
 
 @media screen and (max-width: 767px) {
