--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -19,7 +19,7 @@
     .places__title {
         font-size: 32px;
         line-height: 35px;
-        margin: 0 0 32px;
+        margin: 0;
         padding: 0 16px;
     }
 }
