--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -10,7 +10,11 @@
 @media screen and (max-width: 767px) {
    .places__paragraph {
       margin: 0;
-      padding: 25px 16px 0;
+      padding: 0 16px 0;
+   }
+
+   .places__paragraph:first-child {
+      margin-bottom: 32px;
    }
 }
 
