--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,17 +1,18 @@
 .places__image {
-    width: 440px;
+    width: 100%;
+    
     object-fit: cover;
     grid-area: places__image;
 }
 
 @media screen and (max-width: 1023px) {
     .places__image {
-        width: 340px;
+        max-width: 340px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .places__image {
-        width: 100%;
+        max-width: 767px;
     }
 }
