--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -12,7 +12,9 @@
 
 @media screen and (max-width: 767px) {
     .places {
-        padding: 0;
+        padding: 92px 48px;
+
+        /* padding: 0; */
         margin: 0;
     }
 }
