--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,6 @@
 .intro {
     max-width: 690px;
-    margin: 92px 0;
+    margin: 92px auto;
     color: #fff;
     display: flex;
     justify-content: left;
@@ -19,7 +19,7 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .intro {
         padding: 16px;
         margin: 64px 0;
