--- a/blocks/places/__website-block/places__website-block.css
+++ b/blocks/places/__website-block/places__website-block.css
@@ -10,7 +10,7 @@
 @media screen and (max-width: 767px) {
     .places__website-block {
         max-width: 288px;
-        padding: 0 16px;
+        padding: 32px 16px;
         margin: 0;
     }
 }
