--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,27 +1,12 @@
 .places {
     max-width: 984px;
     margin: 0 auto;
-    padding: 0 92px 148px;
-}
-
-@media screen and (max-width: 1023px) {
-    .places {
-        padding: 92px 48px;
-    }
+    padding: 0 48px 92px;
 }
 
 @media screen and (max-width: 767px) {
     .places {
-        padding: 92px 48px;
-
-        /* padding: 0; */
+        padding: 0 0;
         margin: 0;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .places {
-        max-width: 100%;
-        padding: 0;
     }
 }
