--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,6 +1,5 @@
 .places__image {
-    width: 100%;
-    
+    width: 100%;    
     object-fit: cover;
     grid-area: places__image;
 }
@@ -8,6 +7,7 @@
 @media screen and (max-width: 1023px) {
     .places__image {
         max-width: 340px;
+        border: 1px solid #000;
     }
 }
 
