--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,7 +2,7 @@
     font-size: 54px;
     line-height: 58px;
     font-weight: 900;
-    min-width: 288px;
+    max-width: 690px;
     padding: 0;
     margin: 0;
 }
@@ -21,5 +21,3 @@
         line-height: 35px;
     }
 }
-
-
