--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,12 +4,14 @@
     font-size: 10px;
     letter-spacing: 1.5px;
     line-height: 14px;
-    margin: 8px auto 0 24px;
+    margin: 0;
+    padding-top: 8px;
 }
 
 @media screen and (max-width: 767px) {
     .lead__caption {
-        margin: 8px auto 0 16px;
+        padding: 0;
+        margin: 8px 0 0 18px;
         font-size: 10px;
         line-height: 14px;
         
