--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,16 @@
 .lead__image {
     margin: 0 auto;
-    width: 100%;
+    max-width: 984px;
 }
 
+@media screen and (max-width: 1024px) {
+    .lead__image {
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .lead__image {
+        width: 100%;
+    }
+}
