--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,6 @@
 @import url('../vendor/normalize.css'); /* -----Нормалайз----- */
 @import url('../vendor/inter-font.css');/* -----Шрифты------ */
+@import url('../blocks/content/content.css');
 @import url('../blocks/page/page.css');
 
 
@@ -25,7 +26,7 @@
 @import url('../blocks/intro/__text/intro__text.css');
 @import url('../blocks/intro/__list/intro__list.css');
 @import url('../blocks/intro/__list-text/intro__list-text.css');
-@import url('../blocks/intro/intro__list-item.css');    
+@import url('../blocks/intro/__list-item/intro__list-item.css');
 
 /* ------------------Фото гриды------------------- */
 @import url('../blocks/photo-grid/photo-grid.css');
