--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -3,4 +3,5 @@
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-weight: normal;
     text-rendering: optimizeLegibility;
+    margin: 0 auto;
 }
