--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,12 +5,12 @@
     padding: 0 48px;
     margin: 0 auto;
     max-width: 1184px;
+    justify-items: center;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1279px) {
     .photo-grid {
         grid-template-columns: repeat(3, 1fr);
-        gap: 14px;
     }
 }
 
@@ -18,16 +18,17 @@
 @media screen and (max-width: 1023px) {
     .photo-grid {
         grid-template-columns: repeat(2, 1fr);
-        max-width: 928px;
         padding: 0 24px;
+        gap: 14px;
+        max-width: 928px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .photo-grid {
         grid-template-columns: repeat(1, 1fr);
-        max-width: 720px;
         margin: 0;
         padding: 0 16px;
+        max-width: 720px;
     }
 }
