--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -4,6 +4,13 @@
     grid-area: places__image;
 }
 
+@media screen and (max-width: 1280px) {
+    .places__image {
+        max-width: 440px;
+    }
+}
+
+
 @media screen and (max-width: 1023px) {
     .places__image {
         max-width: 340px;
