--- a/blocks/places/__description/places__description.css
+++ b/blocks/places/__description/places__description.css
@@ -1,14 +1,20 @@
 .places__description {
     grid-area: places__description;
     margin: 0;
-    padding: 0;
     width: 100%;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-size: 18px;
     line-height: 29.34px;
     font-weight: 400;
 }
- 
+
+@media screen and (max-width: 1023px) {
+    .places__description {
+        font-size: 16px;
+        line-height: 26.08px;
+    }  
+}
+
 @media screen and (max-width: 767px) {
     .places__description {
         font-size: 16px;
@@ -16,3 +22,4 @@
         padding-top: 32px;
     }  
 }
+
