--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -9,6 +9,14 @@
     padding: 0;
 }
 
+@media screen and (max-width: 1280px) {
+    .intro {
+        margin: 92px 0;
+        padding: 0 48px 0;
+        max-width: 690px;
+    }
+}
+
 @media screen and (max-width: 1023px) {
     .intro {
         padding: 0 24px;
