--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,6 +8,13 @@
     padding-top: 8px;
 }
 
+@media screen and (max-width: 1023px) {
+    .lead__caption {
+        padding: 0;
+        margin: 8px 0 0 24px;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .lead__caption {
         padding: 0;
