--- a/blocks/baikal/__subtitle/baikal__subtitle.css
+++ b/blocks/baikal/__subtitle/baikal__subtitle.css
@@ -11,7 +11,7 @@
     .baikal__subtitle {
         font-size: 14px;
         line-height: 16px;
-        margin: 0;
+        margin: 0 auto;
         padding-top: 16px;
     }
 }
