--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,10 +4,19 @@
     justify-content: center;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1279px) {
     .places {
-        width: auto;
-        margin: 0 48px;
+        /* width: auto; */
+        max-width: 928px;
+        /* margin: 0 48px; */
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .places {
+        /* width: auto; */
+        margin: 0 auto;
+        align-items: center;
     }
 }
 
